[package]
name = "unlocked"
version = "0.1.0"
edition = "2021"
authors = ["Felix Prasanna"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.5"
crossbeam-utils = "0.8.8"
haphazard = "0.1.4"

[target.'cfg(loom)'.dependencies]
loom = "0.5"